# msg-stats

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.sqlx/: query-0dca93b0cd1c109d95a11a72bcc5c921d315db0596e974ec4f5e5cba888bf77d.json  query-cae687bfc72c2be37d0bf45f3cd96a626bed060a50fbd2178262658cbbadd8e3.json  query-ecddfa6b70a99f594c61b2647dd5dc76b8d02abbcca84115ad98ce453e10fb70.json
sql/: schema.sql
src/: main.rs  messenger.rs
src/base/: adapter.rs  database.rs  lib.rs  mod.rs  model.rs  unnest.rs
