[package]
name = "messenger-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros", "sync"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "time" ] }
serde = { version = "1.0.209", features = ["derive"] }
encoding_rs = "0.8.34"
time = {  version = "0.3.36", features = ["macros"] }
futures = "0.3.30"
itertools = "0.13.0"
clap = { version = "4.0", features = ["derive"] }